<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/adPostGreyBackground">

    <EditText
            android:id="@+id/editText_postAd_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_postAd_header"
            app:layout_constraintVertical_bias="0.261"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/editText_postAd_description"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textLongMessage|textMultiLine"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_postAd_title"
            app:layout_constraintVertical_bias="0.055"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/editText_postAd_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_postAd_description"
            app:layout_constraintVertical_bias="0.098"
            tools:targetApi="o"/>

    <Button
            android:id="@+id/button_post_ad"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="postBtnClick"
            android:text="@string/postAd"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_postAd_price"
            app:layout_constraintVertical_bias="0.52"/>


    <TextView
            android:id="@+id/textView_postAd_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/orbitron"
            android:text="@string/post"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView_postAd_category"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/category"
            android:onClick="selectCategoryBtnClick"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editText_postAd_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textView_postAd_adType"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/type"
            android:onClick="selectTypeBtnClick"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_postAd_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_postAd_header"
            app:layout_constraintVertical_bias="0.695"/>

</android.support.constraint.ConstraintLayout>