<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".presentation.MainActivity"
              tools:visibility="visible">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

        <include
            android:id="@+id/imageButton_mainActivity_accountButton"
            layout="@layout/activity_user_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:fontFamily="@font/orbitron"/>
    </LinearLayout>

    <android.support.design.widget.TabLayout
            android:id="@+id/tabview_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@android:color/black"
            android:contextClickable="true"
            app:tabIconTint="@color/colorPrimary"
            app:tabIndicatorColor="@color/black_overlay"
            app:tabIndicatorHeight="6dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/black_overlay"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:tabTextColor="@android:color/background_light">

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"

                android:text="@string/tabTextAll"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"

                android:text="@string/tabTextBooks"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"

                android:text="@string/tabTextEvents"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_servicesJobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"

                android:text="@string/tabTextServiceJobs"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_electronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contextClickable="true"
                android:text="@string/tabTextElectronics"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_hobbiesGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"

                android:text="@string/tabTextHobbiesGames"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contextClickable="true"
                android:text="@string/tabTextLiving"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_transportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:text="@string/tabTextTransportation"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_arrangement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:text="@string/tabTextArrangement"/>


        <android.support.design.widget.TabItem
                android:id="@+id/tabItem_mainActivity_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:text="@string/tabTextOther"/>


    </android.support.design.widget.TabLayout>


    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorPrimaryDark">


        <TextView
                android:id="@+id/textView_mainActivity_adType"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:onClick="filterTypeBtnClick"
                android:text="@string/filter"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        <Button
            android:id="@+id/button_mainActivity_postAnAd"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="50dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/black_overlay"
            android:fontFamily="@font/candal"
            android:onClick="postAdBtnClick"
            android:text="@string/postAnAd"
            android:textColor="@android:color/background_light" />


        <ImageButton
            android:id="@+id/button_mainActivity_sortByPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@drawable/baseline_sort_white_18"
            android:onClick="sortBtnClick"
            tools:ignore="contentDescription" />


    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_mainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        />
</LinearLayout>
