<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.loginactivity.Login"
        android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/textView_login_loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128"/>

    <EditText
            android:id="@+id/editText_login_enterUserName"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/colorPrimary"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
            android:shadowColor="@color/black_overlay"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/black_overlay"
            android:textColorHint="@color/whiteBtn"
            android:textColorLink="@color/black_overlay"
            android:textCursorDrawable="@drawable/cursor_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
            app:layout_constraintVertical_bias="0.042"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/editText_login_enterPassword"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="@color/colorPrimary"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="@color/colorAccent"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/whiteBtn"
            android:textColorLink="@color/colorAccent"
            android:textCursorDrawable="@drawable/cursor_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_enterUserName"
            app:layout_constraintVertical_bias="0.052"
            tools:targetApi="o"/>

    <Button
            android:id="@+id/button_login_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@android:color/background_light"
            android:onClick="loginBtnClick"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.665"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
            app:layout_constraintVertical_bias="0.196"/>

    <TextView
            android:id="@+id/textView_login_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
            app:layout_constraintVertical_bias="0.491"/>

    <Button
            android:id="@+id/signUp_btn_onLogin"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@android:color/background_light"
            android:onClick="signUpBtnClick"
            android:text="@string/signupTwo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_login_or"
            app:layout_constraintVertical_bias="0.248"/>

    <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="forgetPasswordBtnClick"
            android:text="@string/forgetPassword"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_login_loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
            app:layout_constraintVertical_bias="0.576"/>


</android.support.constraint.ConstraintLayout>