...
    <string name="edit">Edit</string>

    <string name="delete">Delete</string>

    <string name="repost">Repost</string>

    <string name="myAds">My Ads</string>

    <string name="photo">CAPTURE PHOTO</string>

    <string name="save">SAVE</string>

    <string name="reportAd">REPORT AD</string>

    <string name="viewReportedAds">View Reported Ads</string>

    <string name="reportedAds">Reported Ads</string>

    <string name="changePassword">CHANGE PASSWORD</string>

    <string name="fullName">Full Name: </string>

    <string name="adOwnerEmail">Email: </string>
...
